* Adjusted js loader for IE
* Using 'strict' mode now in all JS sources

. Components: Scorecard, Cube, Charts, Export
* Charts support for dark themes
* Charts removed some chart background grid elements for less crowded charts
* Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.  

. Widgets
* periodChooser got new options: useSimpleXPath to use a straight forward xpath, autoPopup to directly show the popup calendar and suppressButtons to not show any buttons at all
* disableNavPath attribute to turn off navPath linkage
* New widget: "slider", based on noUiSlider implementation

. Core
* Promise polyfill: ecma6-promise (used for IE)
* Wrs: add support for JDBC SQLXML type

. Themes
* new pageEffect bcdEffectPageStickyFooter

. Security
* to come

. Server
* Updated 3rd party jars (apache commons etc) to latest versions

. Build / Dev / Docu
* In Eclipse, sub-projects Client, Server, Theme etc now have names BCD-UI--SubProjectName to keep them together in the navigation tree
* Switched to gradle 4.2, added gradle wrapper, updated nodeJs to 6.11
* Updated bcduiApiStubs.js to fit Eclipse Oxygen+Tern and IDEA 2017.2
* HTML JS API docu is now showing source names and lines

.Major bug fixes:
* to come

.Backward Incompatibilities:
* Component: cube/scorecard blindUpDowns, ranking require new i18n keys (bcd_Rank_, bcd_Sc_Blind_, bcd_Cb_Blind_)
* Charts: Moved VML drawer to BCD-UI-DE
* Updated 3rd party jars (apache commons etc) to latest versions
* Cube: for templateManager, RankingEditor or Summary, you need to include bcduiComponent in addition to bcduiCube. Symptom: _renderSummaryArea is undefined