@@ -19,7 +19,12 @@ Some changes are backward incompatible and may require code change in the projec
 * Charts support for dark themes
 * Charts removed some chart background grid elements for less crowded charts
 * Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
-The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.  
+The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.
+* Excel Report export moved to client side using FileSaver.js
+* Remove client refresh on detail export which is not needed. Change context menue action from 
+    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:contextMenuCubeClientRefresh", {actionId: 'exportWysiwygAsExcel'})</JavaScriptAction>
+    to
+    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:reportExport")</JavaScriptAction>
 
 . Widgets
 * periodChooser got new options: useSimpleXPath to use a straight forward xpath, autoPopup to directly show the popup calendar and suppressButtons to not show any buttons at all
